--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -17,12 +17,19 @@
 <h1>Persona</h1>
 <p>Name:Suzy Business Owner</p>
 <p>Age 30-45</p>
-<p>Profession: </p>
-<p>Technology: </p>
-<p>Attitudes and Behaviors: </p>
-<p>Frustrations and Needs:</p>
-<p>Goals: </p>
-<p>User Story:</p>
+<p>Profession: As the owner of a business, Ms. Suzy’s role would be multifaceted. Ms. Suzy would have to create business plans to help her stay focused with her business needs. Further, she would have to keep track of finances and accounting for the business, interact with customers, hire and manage talent, and more importantly, make strategic decisions that will impact the growth of her business. </p>
+
+<p>Technology: Ms. Suzy would use many technology available to help her stay organized, track her expenses, and make informed financial decisions. She would be familiar with multiple software to help her complete her task. She would use Quickbooks or Xero for her accounting software. She might also keep track of her expenses with an expense management app., such as, Expensify or Zoho Expense. Depending on the business, she might also use online payment gateways like Square, PayPal or Stripe.
+    Ms. Suzy would want to get both a desk top and laptop for her business. Depending on her office space, she would prefer a compact business desktop with reliable performance and memory. She would also would have a laptop so she could be more mobile and be connected to her customers no matter where and when her customer support is needed.
+    Ms. Suzy would also need a great phone to handle fast performance and a vibrant display such as a OnePlus 8 Pro.
+</p>
+<p>Attitudes and Behaviors: Ms. Suzy would have strong vision of her business. She would be passionate about her entrepreneurship. She would be willing to sacrifice a steady paycheck for financial freedom.   </p>
+
+<p>Frustrations and Needs: Ms. Suzy would be facing risk and uncertainty starting and maintaining her business. She would also be tasked with time constraints, stress and pressure juggling multiple tasks and roles.</p>
+
+<p>Goals: The goal of the website is to have an interaction with the user, by providing clear, concise and easy to navigate through the website. </p>
+
+<p>User Story: The goal of the accounting website is for the user to have a positive experience interacting with the website. The website would help the business owners find services they need as well as a valuable resource, such as tax and accounting tips, tax forms, and a monthly news letter.</p>
 
 
 
