--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -6,28 +6,30 @@
 </head>
 <body>
 <h1>Purpose</h1>
-<p>This project will be a professional website that will focus on the front-end web development for the purpose of an tax-accounting, audit, and book-keeping services, with a strong focus on Oil and Gas accounting. This project will be a professional website that will focus on the front-end web development for the purpose of an tax-accounting, audit, and book-keeping services, with a strong focus on Oil and Gas accounting. </p>
+<p>This project will be a professional website that will focus on the front-end web development for the purpose of an tax-accounting, audit, and book-keeping services, with a strong focus on Oil and Gas accounting. </p>
 <h1>Audience</h1>
-<p>My website is designed to be user-friendly for all individuals, so that the audience can find the accounting services that they are seeking. The audience will come with different technical backgrounds from those who do not have any technical background to professionals that are technically savvy so that my accounting service is scalable. However, the target audience will be for business. </p>
+<p>My website is designed to be user-friendly for all individuals, so that the audience can find the accounting services that they are seeking. The audience will come with different technical backgrounds from those who do not have any technical background to professionals that are technically savvy so that my accounting services are scalable. However, the target audiences will be for business and some individuals. </p>
 <h1>Goal</h1>
-<p>The goal of my website is advertise accounting and tax services. Second, is to tell the user a story about education and experience in Oil and Gas audit/accounting. Third, is to briefly educate the user regarding tax and accounting methodologies, and finally, to engage the user to contact me through intake form, contact us, or tax planner.</p>
+<p>The goal of my website is advertise my accounting and tax services. Second, is to tell the user a story about my education and experience in audit/accounting. Third, is to briefly educate the user regarding tax and accounting methodologies, and finally, to engage the user to contact me through an intake form, contact us, or tax planner.</p>
 <hr>
 <br>
 <br>
 <h1>Persona</h1>
 <p>Name:Suzy Business Owner</p>
-<p>Age 30-45</p>
+<p>Age span: 30-45</p>
 <p>Profession: As the owner of a business, Ms. Suzy’s role would be multifaceted. Ms. Suzy would have to create business plans to help her stay focused with her business needs. Further, she would have to keep track of finances and accounting for the business, interact with customers, hire and manage talent, and more importantly, make strategic decisions that will impact the growth of her business. </p>
 
-<p>Technology: Ms. Suzy would use many technology available to help her stay organized, track her expenses, and make informed financial decisions. She would be familiar with multiple software to help her complete her task. She would use Quickbooks or Xero for her accounting software. She might also keep track of her expenses with an expense management app., such as, Expensify or Zoho Expense. Depending on the business, she might also use online payment gateways like Square, PayPal or Stripe.
-    Ms. Suzy would want to get both a desk top and laptop for her business. Depending on her office space, she would prefer a compact business desktop with reliable performance and memory. She would also would have a laptop so she could be more mobile and be connected to her customers no matter where and when her customer support is needed.
-    Ms. Suzy would also need a great phone to handle fast performance and a vibrant display such as a OnePlus 8 Pro.
+<p>Technology: Ms. Suzy would use many technology available to help her stay organized, track her expenses, and make informed financial decisions. She would be familiar with multiple software to help her complete her task. She would use Quickbooks or Xero for her accounting software. She might also keep track of her expenses with an expense management app., such as, Expensify or Zoho Expense. Depending on the business, she might also use online payment gateways like Square, PayPal or Stripe.</p>
+
+<p> Ms. Suzy would want to get both a desk top and laptop for her business. Depending on her office space, she would prefer a compact business desktop with reliable performance and memory. </p>
+She would also would have a laptop so she could be more mobile and be connected to her customers no matter where and when her customer support is needed.
+<p>Ms. Suzy would also need a great phone to handle fast performance and a vibrant display such as a OnePlus 8 Pro.
 </p>
-<p>Attitudes and Behaviors: Ms. Suzy would have strong vision of her business. She would be passionate about her entrepreneurship. She would be willing to sacrifice a steady paycheck for financial freedom.   </p>
+<p>Attitudes and Behaviors: Ms. Suzy would have strong vision of her business. She would be passionate about her entrepreneurship. She would be willing to sacrifice a steady paycheck for financial freedom and to be her own boss. </p>
 
-<p>Frustrations and Needs: Ms. Suzy would be facing risk and uncertainty starting and maintaining her business. She would also be tasked with time constraints, stress and pressure juggling multiple tasks and roles.</p>
+<p>Frustrations and Needs: Ms. Suzy would be facing risk and uncertainty starting and maintaining her business. She would also be tasked with time constraints, stress and pressure juggling multiple tasks and roles. Hence, Ms. Suzy's reason for seeking out my website. </p>
 
-<p>Goals: The goal of the website is to have an interaction with the user, by providing clear, concise and easy to navigate through the website. </p>
+<p>Goals: The goal of the website is to have an interaction with the Ms. Suzy, by providing clear, concise and easy way to navigate through the website so that she can find the services she may need for her business. Further, to communicate rapidly with Ms. Suzy to answer her personal or business financial needs.</p>
 
 <p>User Story: The goal of the accounting website is for the user to have a positive experience interacting with the website. The website would help the business owners find services they need as well as a valuable resource, such as tax and accounting tips, tax forms, and a monthly news letter.</p>
 
