working on milestone

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -8,8 +8,49 @@
 <h1>Home</h1>
 <p1>blah  lah</p1>
 <h1>About:</h1>
+<p1>A little about me: My mission is to help clients excel by providing them with an array of services from business to individual.  I strive to provided superior client service while building long-term client relationships. </p1>
 <h1>Service:</h1>
+<p1>Southwest Tax and Accounting Service provides a wide variety of accounting, tax and financial management services tailored to meet the needs of our business clients throughout the United States.</p1>
+<ol>
+    <li>Tax Prep</li>
+    <li>IRS Resolutions</li>
+    <li>Bookkeeping</li>
+    <li>Payroll</li>
+    <li>Business Support Services</li>
+    <li>Software training</li>
+    <li>Oil and Gas</li>
+    <li>Real Estate</li>
+</ol>
 <h1>Resources:</h1>
+<h2><span>Financial Calculators</span></h2>
+<ol>
+<li>Tax Calculators</li>
+<li>Business Calculators</li>
+<li>Saving Calculators</li>
+<li>Investment Calculators</li>
+<li>Retirement Calculators</li>
+</ol>
+<h2><span>Helpful Links</span></h2>
+<ol>
+    <li>Check the status of your IRS Refund</li>
+    <li>Tax Preparation Checklist</li>
+    <li>IRS w-2 Form</li>
+    <li>IRS W-4 Form</li>
+    <li>Saving for College</li>
+    h2><span>Financial Calculators</span></h2>
+    <ol>
+        <li>Tax Calculators</li>
+        <li>Business Calculators</li>
+        <li>Saving Calculators</li>
+        <li>Investment Calculators</li>
+        <li>Retirement Calculators</li>
+        <li>Identity theft and Credit Protection</li>
+
+
+
+
+        <p1>blah  lah</p1>
 <h1>Contact: </h1>
+<p1>blah  lah</p1>
 </body>
 </html>
