pwp with wireframes

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Mexico </title>
+    <title>Southwest Accounting and Tax Preparation LLC </title>
 </head>
-<body>
-<h1>Home</h1>
-<p1>blah  lah</p1>
+<body >
+<h1>Home Page: Southwest Accounting and Tax Preparation LLC </h1>
+<p1>A little about me: I am from Bernalillo, New Mexico. After receiving my Bachelors in Chemistry, I continued my love for numbers with a masters with accounting and finance. I have worked in the private as well as in the public sector, either preparing taxes or as a auditor. I have 12 years in oil and gas royalty accounting and 2 years as a forensic accountant.</p1>
 <h1>About:</h1>
-<p1>A little about me: My mission is to help clients excel by providing them with an array of services from business to individual.  I strive to provided superior client service while building long-term client relationships. </p1>
+<p1>A little about my business: My mission is to help clients excel by providing them with an array of services from business to individual.  I strive to provided superior client service while building long-term client relationships. </p1>
 <h1>Service:</h1>
 <p1>Southwest Tax and Accounting Service provides a wide variety of accounting, tax and financial management services tailored to meet the needs of our business clients throughout the United States.</p1>
 <ol>
@@ -37,20 +37,12 @@
     <li>IRS w-2 Form</li>
     <li>IRS W-4 Form</li>
     <li>Saving for College</li>
-    h2><span>Financial Calculators</span></h2>
-    <ol>
-        <li>Tax Calculators</li>
-        <li>Business Calculators</li>
-        <li>Saving Calculators</li>
-        <li>Investment Calculators</li>
-        <li>Retirement Calculators</li>
-        <li>Identity theft and Credit Protection</li>
+    <li>Identity theft and Credit Protection</li>
+</ol>
 
-
-
-
-        <p1>blah  lah</p1>
 <h1>Contact: </h1>
-<p1>blah  lah</p1>
+<p1>Get in Touch with us: Intake form with submit</p1>
+<script type="module" src="/src/main.js"></script>
+</section>
 </body>
 </html>
